--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
     container_name: vinom_redis
     command: ["redis-server", "--appendonly", "no"]
     healthcheck:
-      test: [ "CMD", "redis-cli", "--raw", "incr", "ping" ]
+      test: ["CMD", "redis-cli", "-h", "localhost", "--raw", "PING"]
       interval: 5s
       timeout: 5s
       retries: 3
@@ -16,7 +16,8 @@ services:
     image: rediscommander/redis-commander:latest
     container_name: redis-commander
     environment:
-      - REDIS_HOSTS=local:redis
+      REDIS_HOST: ${REDIS_HOST}
+      REDIS_PORT: ${REDIS_PORT}
     ports:
       - "8081:8081"
     networks:
@@ -28,7 +29,7 @@ services:
     image: mongo:8.0
     container_name: vinom_db
     healthcheck:
-      test: ["CMD","mongosh", "--eval", "db.adminCommand('ping')"]
+      test: ["CMD", "mongosh", "-u", "${DB_USER}", "-p", "${DB_PASS}", "--eval", "db.adminCommand('ping')"]
       interval: 5s
       timeout: 5s
       retries: 3
@@ -39,34 +40,40 @@ services:
     volumes:
       - db_data:/data/db
     networks:
-      - app_network
+      - db_network
 
   app:
     build:
       context: . 
       dockerfile: Dockerfile
       target: dev-stage
+    container_name: vinom_app
     ports:
       - "8080:8080"
+    volumes:
+      - .:/app
+      - /app/tmp 
     environment:
       DB_HOST: ${DB_HOST}
       DB_USER: ${DB_USER}
       DB_PASS: ${DB_PASS}
       DB_PORT: ${DB_PORT}
+      DB_NAME: ${DB_NAME}
+      REDIS_HOST: ${REDIS_HOST}
+      REDIS_PORT: ${REDIS_PORT}
     networks:
       - redis_network
-      - app_network
+      - db_network 
     depends_on:
       db:
         condition: service_healthy
       redis:
         condition: service_healthy
 
-
 networks:
   redis_network:
     driver: bridge
-  app_network:
+  db_network:
     driver: bridge
 
 volumes:
