--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,18 +30,19 @@ services:
     environment:
       HOST_IP: app
       REST_PORT: ${REST_PORT}
+      GIN_MODE: ${GIN_MODE}
       DB_HOST: ${DB_HOST}
       DB_USER: ${DB_USER}
       DB_PASS: ${DB_PASS}
       DB_PORT: ${DB_PORT}
       DB_NAME: ${DB_NAME}
+      JWT_SECRET: ${JWT_SECRET}
+      JWT_ISSUER: ${JWT_ISSUER}
       MATCHMAKING_HOST: ${MATCHMAKING_HOST}
       MATCHMAKING_PORT: ${MATCHMAKING_PORT}
       SESSION_PORT: ${SESSION_PORT}
       SESSION_HOST: ${SESSION_HOST}
-      GIN_MODE: ${GIN_MODE}
-      JWT_SECRET: ${JWT_SECRET}
-      JWT_ISSUER: ${JWT_ISSUER}
+      RPC_TIMEOUT: ${RPC_TIMEOUT}
     networks:
       - db_network 
     depends_on:
